[package]
name = "rfapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropshot = "0.6.0"
tokio = { version = "1", features = ["full"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
http = "0.2.5"
hyper = {version="0.14", features=["full"]}
lazy_static = "1.4.0"
